--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ install:
 script: "./travis-tool.sh run_tests"
 after_failure:
 - "./travis-tool.sh dump_logs"
+after_success:
+  - "Rscript -e 'library(covr);coveralls()'"
 notifications:
   email:
     on_success: change
