--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ before_install:
 - "./travis-tool.sh bootstrap"
 install:
 - "./travis-tool.sh install_deps"
-- "./travis-tool.sh install_r microbenchmark knitr testthat"
-- "./travis-tool.sh install_github robertzk/stagerunner jimhester/covr"
+- "./travis-tool.sh install_r testthat"
+- "./travis-tool.sh install_github robertzk/stagerunner robertzk/testthatsomemore jimhester/covr"
 script: "./travis-tool.sh run_tests"
 after_failure:
 - "./travis-tool.sh dump_logs"
