--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,6 +25,7 @@ Roxygen: list(wrap = FALSE)
 Collate:
     'mungebit-initialize.R'
     'mungebit-run.R'
+    'mungebit-train.R'
     'mungebit.R'
     'package.mungebits2.R'
     'pending.R'
