Add is.mungepiece helper

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(debug,mungebit)
 S3method(undebug,default)
 S3method(undebug,mungebit)
 export(debug)
+export(is.mungepiece)
 export(mungebit)
 export(undebug)
 import(R6)
