Add list_merge helper.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(undebug,mungebit)
 export(debug)
 export(is.mungebit)
 export(is.mungepiece)
+export(list_merge)
 export(mungebit)
 export(undebug)
 import(R6)
