--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(debug,default)
 S3method(debug,mungebit)
 S3method(undebug,default)
 S3method(undebug,mungebit)
+export(column_transformation)
 export(debug)
 export(is.mungebit)
 export(is.mungepiece)
