--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(debug,default)
 S3method(debug,mungebit)
+S3method(debug,mungepiece)
 S3method(undebug,default)
 S3method(undebug,mungebit)
 export(column_transformation)
