Fix some debug issues.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(debug,mungebit)
 S3method(debug,mungepiece)
 S3method(undebug,default)
 S3method(undebug,mungebit)
+S3method(undebug,mungepiece)
 export(column_transformation)
 export(debug)
 export(is.mungebit)
