--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,6 +27,7 @@ Roxygen: list(wrap = FALSE)
 Collate:
     'column_transformation.R'
     'debug.R'
+    'munge.R'
     'mungebit-initialize.R'
     'mungebit-run.R'
     'mungebit-train_predict.R'
