--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(debug)
 export(is.mungebit)
 export(is.mungepiece)
 export(list_merge)
+export(munge)
 export(mungebit)
 export(undebug)
 import(R6)
