Add examples to parse_mungepiece and fix docs issues.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,8 @@ export(is.mungepiece)
 export(list_merge)
 export(munge)
 export(mungebit)
+export(mungepiece)
+export(parse_mungepiece)
 export(undebug)
 import(R6)
 import(crayon)
