Copy over standard_column_format.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,5 +39,6 @@ Collate:
     'mungepiece.R'
     'package.mungebits2.R'
     'parse_mungepiece.R'
+    'standard_column_format.R'
     'utils.R'
     'zzz.R'
