--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method(undebug,mungebit)
 S3method(undebug,mungepiece)
 export(column_transformation)
 export(debug)
+export(except)
 export(is.mungebit)
 export(is.mungepiece)
 export(list_merge)
@@ -15,6 +16,7 @@ export(munge)
 export(mungebit)
 export(mungepiece)
 export(parse_mungepiece)
+export(standard_column_format)
 export(undebug)
 import(R6)
 import(crayon)
