--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(except)
 export(is.mungebit)
 export(is.mungepiece)
 export(list_merge)
+export(multi_column_transformation)
 export(munge)
 export(mungebit)
 export(mungepiece)
