Warn the user when mungebits is loaded after mungebits2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,15 @@
 S3method(debug,default)
 S3method(debug,mungebit)
 S3method(debug,mungepiece)
+S3method(debug,transformation)
+S3method(print,column_transformation)
+S3method(print,multi_column_transformation)
+S3method(print,mungebit)
+S3method(print,mungepiece)
 S3method(undebug,default)
 S3method(undebug,mungebit)
 S3method(undebug,mungepiece)
+S3method(undebug,transformation)
 export(column_transformation)
 export(debug)
 export(except)
