--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,10 +7,10 @@ Description: A way of thinking about data preparation that
     With mungebits, you can save time on having to re-implement your
     R code to work in production and instead re-use the same codebase.
 Version: 0.1.0.9001
-Author: Robert Krzyzanowski <technoguyrob@gmail.com>
-Maintainer: Robert Krzyzanowski <technoguyrob@gmail.com>
+Author: Robert Krzyzanowski <rob@syberia.io>
+Maintainer: Robert Krzyzanowski <rob@syberia.io>
 Authors@R: c(person("Robert", "Krzyzanowski",
-    email = "technoguyrob@gmail.com", role = c("aut", "cre")))
+    email = "rob@syberia.io", role = c("aut", "cre")))
 Depends:
     R (>= 3.1.0)
 License: MIT + file LICENSE
