--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
 install:
 - "./travis-tool.sh install_deps"
 - "./travis-tool.sh install_r testthat microbenchmark"
-- "./travis-tool.sh install_github syberia/stagerunner robertzk/testthatsomemore kirillseva/covr"
+- "./travis-tool.sh install_github robertzk/mungebits syberia/stagerunner robertzk/testthatsomemore kirillseva/covr"
 script: "./travis-tool.sh run_tests"
 after_failure:
 - "./travis-tool.sh dump_logs"
