Set up ability to perform legacy mungebit creation in munge method.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(column_transformation)
 export(debug)
 export(except)
 export(is.legacy_mungebit)
+export(is.legacy_mungebit_function)
 export(is.legacy_mungepiece)
 export(is.mungebit)
 export(is.mungepiece)
