Add is.transformation to utilities.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(is.legacy_mungebit_function)
 export(is.legacy_mungepiece)
 export(is.mungebit)
 export(is.mungepiece)
+export(is.transformation)
 export(list_merge)
 export(multi_column_transformation)
 export(munge)
