--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ r_github_packages:
     - robertzk/mungebits
 
 r_binary_packages:
+    - roxygen2
     - testthat
     - microbenchmark
     - crayon
