Update to Trusty
Precise doesn't support R Binary installations, increasing build time.
It's also unlikley that Syberia users will be using Precise, as it's End
of life.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: r
 sudo: required
 cache: packages
+dist: trusty
 r_github_packages:
     - syberia/stagerunner
     - robertzk/testthatsomemore
