--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: r
 sudo: required
 cache: packages
 dist: trusty
+r:
+    - oldrel
+    - release
+    - devel
 r_github_packages:
     - syberia/stagerunner
     - robertzk/testthatsomemore
