--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ r:
     - release
     - devel
 r_github_packages:
+    - hadley/testthat
     - syberia/stagerunner
     - robertzk/testthatsomemore
     - kirillseva/covr
@@ -14,7 +15,6 @@ r_github_packages:
 
 r_binary_packages:
     - roxygen2
-    - testthat
     - microbenchmark
     - crayon
     - httr
